; ModuleID = '/home/carl/AnghaBench/git/xdiff/extr_xutils.c_xdl_emit_hunk_hdr.c'
source_filename = "/home/carl/AnghaBench/git/xdiff/extr_xutils.c_xdl_emit_hunk_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 (i32, i64, i64, i64, i64, i8*, i64)*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xdl_emit_hunk_hdr(i64 %0, i64 %1, i64 %2, i64 %3, i8* %4, i64 %5, %struct.TYPE_4__* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca %struct.TYPE_4__*, align 8
  store i64 %0, i64* %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i64 %3, i64* %12, align 8
  store i8* %4, i8** %13, align 8
  store i64 %5, i64* %14, align 8
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %15, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i64 (i32, i64, i64, i64, i64, i8*, i64)*, i64 (i32, i64, i64, i64, i64, i8*, i64)** %17, align 8
  %19 = icmp ne i64 (i32, i64, i64, i64, i64, i8*, i64)* %18, null
  br i1 %19, label %29, label %20

20:                                               ; preds = %7
  %21 = load i64, i64* %9, align 8
  %22 = load i64, i64* %10, align 8
  %23 = load i64, i64* %11, align 8
  %24 = load i64, i64* %12, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = load i64, i64* %14, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %28 = call i32 @xdl_format_hunk_hdr(i64 %21, i64 %22, i64 %23, i64 %24, i8* %25, i64 %26, %struct.TYPE_4__* %27)
  store i32 %28, i32* %8, align 4
  br label %62

29:                                               ; preds = %7
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i64 (i32, i64, i64, i64, i64, i8*, i64)*, i64 (i32, i64, i64, i64, i64, i8*, i64)** %31, align 8
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = load i64, i64* %10, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %29
  %39 = load i64, i64* %9, align 8
  br label %43

40:                                               ; preds = %29
  %41 = load i64, i64* %9, align 8
  %42 = sub nsw i64 %41, 1
  br label %43

43:                                               ; preds = %40, %38
  %44 = phi i64 [ %39, %38 ], [ %42, %40 ]
  %45 = load i64, i64* %10, align 8
  %46 = load i64, i64* %12, align 8
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %43
  %49 = load i64, i64* %11, align 8
  br label %53

50:                                               ; preds = %43
  %51 = load i64, i64* %11, align 8
  %52 = sub nsw i64 %51, 1
  br label %53

53:                                               ; preds = %50, %48
  %54 = phi i64 [ %49, %48 ], [ %52, %50 ]
  %55 = load i64, i64* %12, align 8
  %56 = load i8*, i8** %13, align 8
  %57 = load i64, i64* %14, align 8
  %58 = call i64 %32(i32 %35, i64 %44, i64 %45, i64 %54, i64 %55, i8* %56, i64 %57)
  %59 = icmp slt i64 %58, 0
  br i1 %59, label %60, label %61

60:                                               ; preds = %53
  store i32 -1, i32* %8, align 4
  br label %62

61:                                               ; preds = %53
  store i32 0, i32* %8, align 4
  br label %62

62:                                               ; preds = %61, %60, %20
  %63 = load i32, i32* %8, align 4
  ret i32 %63
}

declare dso_local i32 @xdl_format_hunk_hdr(i64, i64, i64, i64, i8*, i64, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
